API - Initial Implementation of Search Entry Endpoint
