# app/Http/Controllers/Api/EntryController.php
@@ -82,4 +82,58 @@ class EntryController extends BaseController
     {
         return new EntryResource($entry->load('anime', 'theme', 'videos'));
     }
+
+    /**
+     * Display a listing of the resource.
+     *
+     * @OA\Get(
+     *     path="/entry/search",
+     *     operationId="searchEntries",
+     *     tags={"Entry"},
+     *     summary="Get paginated listing of Entries by search criteria",
+     *     description="Returns listing of Entries by search criteria",
+     *     @OA\Parameter(
+     *         description="The search query. Wildcards '*' and '?' are supported. Mapping is to [entry.theme.anime.name + entry.theme.slug + entry.version] and [entry.theme.anime.synonyms.text + entry.theme.slug + entry.version].",
+     *         example="bakemonogatari ED",
+     *         name="q",
+     *         in="query",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Parameter(
+     *         description="The number of resources to return per page. Acceptable range is [1-100]. Default value is 100.",
+     *         example=50,
+     *         name="limit",
+     *         in="query",
+     *         required=false,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Parameter(
+     *         description="The comma-separated list of fields to include by dot notation. Wildcards are supported. If unset, all fields are included.",
+     *         example="entries.\*.version,\*.link",
+     *         name="fields",
+     *         in="query",
+     *         required=false,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful",
+     *         @OA\JsonContent(@OA\Property(property="entries",type="array", @OA\Items(ref="#/components/schemas/EntryResource")))
+     *     )
+     * )
+     *
+     * @return \Illuminate\Http\Response
+     */
+    public function search()
+    {
+        $entries = [];
+        $search_query = strval(request('q'));
+        if (!empty($search_query)) {
+            $entries = Entry::search($search_query)->query(function ($builder) {
+                $builder->with('anime', 'theme', 'videos');
+            })->paginate($this->getPerPageLimit());
+        }
+        return new EntryCollection($entries);
+    }
 }
